fixed alignment

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
     display: flex;
 }
  * {
-/*  border: 1px solid black; */
+  border: 1px solid black; 
  }
 .container {
     display: flex;
